2021-11-24  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (check_attr): Fixed a bug in the processing of error messages
        * check_ssl_cert (main): Handle root certificates in DER format
        * check_ssl_cert (check_attr): Fixed the nmap cipher check for hosts which are not discoverable

2021-11-12  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Skipping the manual renegotiation test with OpenSSL > 3.0.0

2021-11-11  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): Fixed a problem with newlines in variable on some systems (e.g., Fedora)
    * check_ssl_cert (fetch_certificate): Fixed a problem with OpenSSL 3.0.0 and debug mode with certain servers

2021-11-11  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Better extraction of the certificate issuers

2021-11-09  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (fetch_certificate): Parsing of OpenSSL 3 messages
	* check_ssl_cert (fetch_certificate): Ignoring legacy renegotiation if --ignore-tls-renegotiation was specified

2021-10-25  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (debuglog): Better formatting of the elapsed time in the log output

2021-10-22  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (check_attr): Fixed the organization check
        * check_ssl_cert (main): Check if -sigalgs is available
        * check_ssl_cert (check_attr): check if nmap delivers cipher strenghts

2021-10-21  Matteo Corti  <matteo@corti.li>

        * test/unit_tests.sh (testRSA): Added a test for RSA ciphers
        * check_ssl_cert (main): Fixes --rsa on systems not supporting PSS
        * check_ssl_cert (create_temporary_file): Uses mktemp if available (the workaround is only used if not available for speed reasons)

2021-10-15  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (create_temporary_file): AIX compatible temporary file creation

2021-10-12  Matteo Corti  <matteo@corti.li>
