@@ -12,6 +12,7 @@
 * check\_ssl\_cert requires [```expect```](http://en.wikipedia.org/wiki/Expect) or [```timeout```](https://man7.org/linux/man-pages/man1/timeout.1.html) to enable timeouts. If ```expect``` or ```timeout``` are not present on your system timeouts will be disabled.
 * ```dig``` for DANE checks
 * [nmap](https://nmap.org) for the disallowed protocols and cyphers checks
+* ```expand`` for ```--info```
 
 ## Development
 
@@ -25,4 +26,3 @@ Following tools are required for development:
 
 * Simply copy the plugin to your Nagios/Icinga plugin directory
 * Use ```make install``` by  defining the ```DESTDIR``` and ```MANDIR``` variables with the installation targets. E.g, ```make DESTDIR=/nagios/plugins/dir MANDIR=/nagios/plugins/man/dir install```
-
