@@ -170,6 +170,9 @@ Ignores the TLS renegotiation check
 .BR "   --inetproto protocol"
 Force IP version 4 or 6
 .TP
+.BR "   --info"
+Prints certificate information
+.TP
 .BR "   --issuer-cert-cache" " dir"
 directory where to store issuer certificates cache
 .TP
