@@ -1,3 +1,4 @@
+Added an option --info to print certificate information
 2021-11-24 Version  2.13.0: Fixed a bug in the processing of error messages
                             Handling of root certificates in DER format
 2021-11-16 Version  2.12.0: Improved verbose messages
