@@ -1,3 +1,1 @@
- * Fixed a bug in the processing of error messages
- * Handling of root certificates in DER format
- * Fixed the nmap cipher check for hosts which are not discoverable
+ * Added an option ```--info``` to print certificate information
